Tie Dict and Triples mmap()ed segments to Arenas, ensuring the memory segments are really freed, preventing out of native memory errors.